--- a/package.json
+++ b/package.json
@@ -20,14 +20,20 @@
     "@angular/http": "4.4.3",
     "@angular/platform-browser": "4.4.3",
     "@angular/platform-browser-dynamic": "4.4.3",
+    "@ionic-native/camera": "^4.5.2",
     "@ionic-native/core": "4.3.0",
+    "@ionic-native/file": "^4.5.2",
+    "@ionic-native/file-transfer": "^4.5.2",
     "@ionic-native/splash-screen": "4.3.0",
     "@ionic-native/status-bar": "4.3.0",
     "@ionic/storage": "^2.0.1",
     "cordova-android": "~6.3.0",
     "cordova-browser": "^4.1.0",
     "cordova-ios": "^4.5.1",
+    "cordova-plugin-camera": "^4.0.1",
     "cordova-plugin-device": "1.1.4",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-transfer": "^1.7.0",
     "cordova-plugin-ionic-webview": "^1.1.11",
     "cordova-plugin-splashscreen": "~4.0.1",
     "cordova-plugin-statusbar": "https://github.com/apache/cordova-plugin-statusbar.git",
@@ -57,7 +63,10 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-whitelist": {},
-      "ionic-plugin-keyboard": {}
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-file-transfer": {}
     }
   }
 }
