--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/camera": "^4.5.2",
     "@ionic-native/core": "4.3.0",
     "@ionic-native/file": "^4.5.2",
+    "@ionic-native/file-path": "^4.5.2",
     "@ionic-native/file-transfer": "^4.5.2",
     "@ionic-native/splash-screen": "4.3.0",
     "@ionic-native/status-bar": "4.3.0",
@@ -34,6 +35,7 @@
     "cordova-plugin-device": "1.1.4",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-transfer": "^1.7.0",
+    "cordova-plugin-filepath": "^1.1.0",
     "cordova-plugin-ionic-webview": "^1.1.11",
     "cordova-plugin-splashscreen": "~4.0.1",
     "cordova-plugin-statusbar": "https://github.com/apache/cordova-plugin-statusbar.git",
@@ -66,7 +68,8 @@
       "ionic-plugin-keyboard": {},
       "cordova-plugin-camera": {},
       "cordova-plugin-file": {},
-      "cordova-plugin-file-transfer": {}
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-filepath": {}
     }
   }
 }
