--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "cordova-ios": "^4.5.1",
     "cordova-plugin-camera": "^4.0.1",
     "cordova-plugin-device": "1.1.4",
-    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-transfer": "^1.7.0",
     "cordova-plugin-filepath": "^1.1.0",
     "cordova-plugin-ionic-webview": "^1.1.11",
@@ -46,7 +45,8 @@
     "ionicons": "3.0.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18"
+    "zone.js": "0.8.18",
+    "cordova-plugin-file": "^6.0.1"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.0",
