--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@ionic-native/file-transfer": "^4.5.2",
     "@ionic-native/splash-screen": "4.3.0",
     "@ionic-native/status-bar": "4.3.0",
+    "@ionic-native/transfer": "^3.14.0",
     "@ionic/storage": "^2.0.1",
     "cordova-android": "~6.3.0",
     "cordova-browser": "^4.1.0",
     "cordova-ios": "^4.5.1",
     "cordova-plugin-camera": "^4.0.1",
     "cordova-plugin-device": "1.1.4",
+    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-transfer": "^1.7.0",
     "cordova-plugin-filepath": "^1.1.0",
     "cordova-plugin-ionic-webview": "^1.1.11",
@@ -45,8 +47,7 @@
     "ionicons": "3.0.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "cordova-plugin-file": "^6.0.1"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.0",
